Colab を使用して作成されました

--- a/P20251023.ipynb
+++ b/P20251023.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOEadDh8V2AtbHIuScU2JLT",
+      "authorship_tag": "ABX9TyN9ISzJJYZhBbZffbwu5kCg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,85 +28,91 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {
-        "id": "rdCA97VPxE3i",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2e94f7b9-5c4d-44b1-fa38-1d9eeba07bd8"
+        "id": "vnV11W675B9h",
+        "outputId": "baeaf512-bab8-4e64-d7da-37230d44e8c2"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[2 3 4]\n"
+            "とことこ\n",
+            "わんわん\n"
           ]
         }
       ],
       "source": [
-        "import numpy as np\n",
+        "class Dog:\n",
         "\n",
-        "x = np.array([1,2,3])\n"
+        "  def __init__(self,name):\n",
+        "    self.name = name\n",
+        "\n",
+        "  def walk(self):\n",
+        "\n",
+        "    print('とことこ')\n",
+        "\n",
+        "  def naku(self,x='わんわん'):\n",
+        "\n",
+        "    print(x)\n",
+        "\n",
+        "inu1 = Dog('ハチ')\n",
+        "inu2 = Dog('ポチ')\n",
+        "\n",
+        "inu1.walk()\n",
+        "inu2.naku()\n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
       "source": [
         "import numpy as np\n",
-        "#Perceptoron\n",
+        "\n",
+        "class Perceptron:\n",
+        "\n",
+        "  def __init__(self):\n",
+        "\n",
+        "    self.W = np.random.randn(2,1)\n",
+        "    self.b = 0\n",
+        "\n",
+        "  def forward(self,x):\n",
+        "\n",
+        "    z = x @ self.W + self.b\n",
+        "\n",
+        "    return (z>1)*1\n",
         "\n",
         "x = np.array([[0,0],[0,1],[1,0],[1,1]])\n",
-        "y = np.array([0,1,1,1])\n",
+        "y = np.array([0,0,0,1]).reshape(4,1)\n",
         "\n",
-        "w = np.array([0.5,0.5])\n",
-        "b = -0.3\n",
-        "\n",
-        "z = x @ w + b\n",
-        "y = (z>0)*1\n",
-        "print(y)\n",
-        "\n",
-        "\n"
+        "ppn = Perceptron()\n",
+        "out = ppn.forward(x)\n",
+        "out.flatten()\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "C4L0cwuP0S2Z",
-        "outputId": "18fe261f-bb9b-45b0-a974-5992652a1d21"
+        "id": "TMVdr-TN-dfF",
+        "outputId": "c6a36ac1-41df-45f4-f86f-d343e65cf1db"
       },
-      "execution_count": null,
+      "execution_count": 57,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[0 1 1 1]\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0, 0, 0, 0])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 57
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "\n",
-        "a = [1.0,1.0]\n",
-        "\n",
-        "if a == [0,0]:\n",
-        "  print(0)\n",
-        "elif a==[0,1]:\n",
-        "  print(0)\n",
-        "elif a==[1,0]:\n",
-        "  print(0)\n",
-        "elif a==[1,1]:\n",
-        "  print(1)"
-      ],
-      "metadata": {
-        "id": "hq1FSGc00TuB"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
